package QMP.Clima;

public record EstadoClima(int temperatura, Humedad humedad) {
}
